test/sema/typeck/generic/ctor-with-type-param.dora
class Foo[T]
impl[T] Foo[T] {
    fn foo(a: Int32) {
        Bar[T](a);
    }
}

class Bar[T](T)
